Hero section background, header and lead

--- a/index.html
+++ b/index.html
@@ -2,4 +2,8 @@
 layout: default
 title: Your New Jekyll Site
 ---
-{% include about.html %}
+<div class="wrap">
+    {% include hero.html %}
+    {% include grid.html %}
+    <div style="height: 2000px"></div>
+</div>
