--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ title: Your New Jekyll Site
 <div class="wrap">
     {% include hero.html %}
     {% include about.html %}
+    {% include services.html %}
     {% include grid.html %}
     <div style="height: 2000px"></div>
 </div>
