--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ title: Your New Jekyll Site
     {% include hero.html %}
     {% include about.html %}
     {% include services.html %}
+    {% include tools.html %}
     {% include grid.html %}
     <div style="height: 2000px"></div>
 </div>
