--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ title: Your New Jekyll Site
     {% include tools.html %}
     {% include experience.html %}
     {% include testimonial.html %}
+    {% include projects.html %}
     {% include grid.html %}
     <div style="height: 2000px"></div>
 </div>
