--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@ title: Your New Jekyll Site
     {% include experience.html %}
     {% include testimonial.html %}
     {% include projects.html %}
+    {% include contact.html %}
+    {% include footer.html %}
     {% include grid.html %}
     <div style="height: 2000px"></div>
 </div>
